--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 
 # ===============================
+# = EMPLOYEE MANAGEMENT SYSTEM
+# ===============================
+logging.level.com.em.system=TRACE
+logging.level.root=WARN
+
+# ===============================
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:mariadb://localhost:3306/employee_management_system?createDatabaseIfNotExists=true
+spring.datasource.url=jdbc:mariadb://localhost:3306/employee_management_system?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -15,11 +21,17 @@ spring.datasource.validationQuery=SELECT 1
 # ===============================
 # Show or not log for each sql query
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=create-drop
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-# Allows Hibernate to generate SQL optimized for a particular DBMS
+# Allows hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB106Dialect
+
+spring.jpa.open-in-view=true
+
